--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -514,19 +514,18 @@ section#game {
 
       .song-win-block {
         background-color: var(--off-white);
-        margin-bottom: 10px;
       }
         .song-win-block .song-main {
           display: flex;
         }
           .song-win-block .song-main {
-            padding: 10px;
+            padding: 10px 10px 5px;
           }
             .song-win-block .song-main a {
               margin-right: 10px;
             }
           .song-win-block .song-misc {
-            background: var(--off-white);
+            background: var(--white);
             padding: 10px;
           }
 
